# shared-gain

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-config.yaml.swp  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  srlvm_gs.ipynb  srlvm_latents-nb.ipynb  srlvm_latents-nb_scratchpad.ipynb  srlvm_latents-ridge.ipynb
checkpoints/version1/: events.out.tfevents.1770687036.Stellinas_Dell.49220.0
checkpoints/version10/: events.out.tfevents.1770689100.Stellinas_Dell.43124.3
checkpoints/version100/: events.out.tfevents.1770771093.Stellinas_Dell.25508.36  model_checkpoint.ckpt
checkpoints/version101/: events.out.tfevents.1770771094.Stellinas_Dell.25508.37  model.pt  model_checkpoint.ckpt
checkpoints/version102/: events.out.tfevents.1770771094.Stellinas_Dell.25508.38  model.pt  model_checkpoint.ckpt
checkpoints/version103/: events.out.tfevents.1770771094.Stellinas_Dell.25508.39  model.pt  model_checkpoint.ckpt
checkpoints/version104/: events.out.tfevents.1770771094.Stellinas_Dell.25508.40  model.pt  model_checkpoint.ckpt
checkpoints/version105/: events.out.tfevents.1770771096.Stellinas_Dell.25508.41  model.pt  model_checkpoint.ckpt
checkpoints/version106/: events.out.tfevents.1770771101.Stellinas_Dell.25508.42  model.pt  model_checkpoint.ckpt
checkpoints/version107/: events.out.tfevents.1770771102.Stellinas_Dell.25508.43  model.pt  model_checkpoint.ckpt
checkpoints/version108/: events.out.tfevents.1770771103.Stellinas_Dell.25508.44  model.pt  model_checkpoint.ckpt
checkpoints/version109/: events.out.tfevents.1770771104.Stellinas_Dell.25508.45  model.pt  model_checkpoint.ckpt
checkpoints/version11/: events.out.tfevents.1770689309.Stellinas_Dell.43124.4  model_checkpoint.ckpt
checkpoints/version110/: events.out.tfevents.1770771105.Stellinas_Dell.25508.46  model.pt  model_checkpoint.ckpt
checkpoints/version111/: events.out.tfevents.1770771107.Stellinas_Dell.25508.47
checkpoints/version112/: events.out.tfevents.1770771127.Stellinas_Dell.25508.48  model.pt
checkpoints/version113/: events.out.tfevents.1770771127.Stellinas_Dell.25508.49
checkpoints/version114/: events.out.tfevents.1770771128.Stellinas_Dell.25508.50
checkpoints/version115/: events.out.tfevents.1770771131.Stellinas_Dell.25508.51  model.pt
checkpoints/version116/: events.out.tfevents.1770771132.Stellinas_Dell.25508.52  model.pt
checkpoints/version117/: events.out.tfevents.1770775085.Stellinas_Dell.25508.53  model.pt  model_checkpoint.ckpt
checkpoints/version118/: events.out.tfevents.1770775107.Stellinas_Dell.25508.54  model.pt  model_checkpoint.ckpt
checkpoints/version119/: events.out.tfevents.1770775108.Stellinas_Dell.25508.55  model.pt  model_checkpoint.ckpt
checkpoints/version12/: events.out.tfevents.1770689324.Stellinas_Dell.43124.5
checkpoints/version120/: events.out.tfevents.1770775112.Stellinas_Dell.25508.56  model.pt  model_checkpoint.ckpt
checkpoints/version121/: events.out.tfevents.1770775113.Stellinas_Dell.25508.57  model.pt  model_checkpoint.ckpt
checkpoints/version122/: events.out.tfevents.1770775119.Stellinas_Dell.25508.58  model.pt  model_checkpoint.ckpt
checkpoints/version123/: events.out.tfevents.1770775119.Stellinas_Dell.25508.59  model.pt  model_checkpoint.ckpt
checkpoints/version124/: events.out.tfevents.1770775123.Stellinas_Dell.25508.60  model.pt  model_checkpoint.ckpt
checkpoints/version125/: events.out.tfevents.1770775124.Stellinas_Dell.25508.61  model.pt  model_checkpoint.ckpt
checkpoints/version126/: model.pt  model_checkpoint.ckpt  (+1 more)
lib/: constants.py  corr_utils.py  data.py  fit_models.py  fitlvm_utils.py  spks_utils.py  test.ipynb  utils.py
notebooks/: fitters_nb.ipynb  fitters_test.ipynb  gs_crusade.ipynb  sandbox.ipynb  srlvm_latents-nb.ipynb
scripts/: balloon_animals.py  gs_latents.py  plot_gs_latents.py
src/: constants.py  eval_models.py  fit_models.py  fitlvm_utils.py  model_plotters.py  models.py  utils.py
(+231 files in other folders)
