[project]
name = "dfna"
version = "0.1.0"
description = "various analyses of neural activity recorded from a dynamic foraging task"
readme = "README.md"
authors = [
    { name = "Stellina Ao", email = "stellina@ucla.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.1",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.2",
    "aiosignal>=1.4.0",
    "antlr4-python3-runtime>=4.9.3",
    "asttokens>=3.0.1",
    "async-timeout>=5.0.1",
    "attrs>=25.4.0",
    "autograd>=1.8.0",
    "backcall>=0.2.0",
    "blosc2>=4.0.0",
    "certifi>=2026.2.25",
    "cfgv>=3.5.0",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "comm>=0.2.3",
    "contourpy>=1.3.2",
    "cowpy>=1.1.5",
    "cycler>=0.12.1",
    "cython>=3.2.4",
    "damn",
    "dateparser>=1.2.1",
    "debugpy>=1.8.20",
    "decorator>=5.2.1",
    "distlib>=0.4.0",
    "executing>=2.2.1",
    "ffmpeg>=1.4",
    "ffprobe>=0.5",
    "filelock>=3.25.0",
    "fonttools>=4.60.1",
    "frozenlist>=1.8.0",
    "fsspec>=2025.10.0",
    "git-filter-repo>=2.47.0",
    "grpcio>=1.76.0",
    "h5py>=3.13.0",
    "hmmlearn>=0.3.3",
    "identify>=2.6.17",
    "idna>=3.11",
    "imageio>=2.37.2",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "ipython>=8.12.3",
    "ipython-pygments-lexers>=1.1.1",
    "ipywidgets>=8.1.5",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "joblib>=1.4.2",
    "jupyter-client>=8.8.0",
    "jupyter-core>=5.9.1",
    "jupyterlab-widgets>=3.0.16",
    "kiwisolver>=1.4.9",
    "lightning-utilities>=0.15.2",
    "llvmlite>=0.46.0",
    "markdown>=3.10",
    "markupsafe>=3.0.3",
    "mat73>=0.65",
    "matplotlib>=3.10.0",
    "matplotlib-inline>=0.2.1",
    "mpmath>=1.3.0",
    "msgpack>=1.1.2",
    "mtscomp>=1.0.2",
    "multidict>=6.7.0",
    "mypy-extensions>=1.1.0",
    "natsort>=8.4.0",
    "ndindex>=1.10.1",
    "ndnt>=1.3.1",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "nodeenv>=1.10.0",
    "numba>=0.64.0",
    "numexpr>=2.14.1",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "parso>=0.8.6",
    "pathlib>=1.0.1",
    "pathspec>=0.9.0",
    "pickleshare>=0.7.5",
    "pillow>=12.0.0",
    "platformdirs>=4.9.4",
    "pre-commit>=4.5.1",
    "prompt-toolkit>=3.0.52",
    "propcache>=0.4.1",
    "protobuf>=6.33.2",
    "psutil>=7.2.2",
    "pure-eval>=0.2.3",
    "py-cpuinfo>=9.0.0",
    "pygments>=2.19.2",
    "pyparsing>=3.2.5",
    "pyqt6>=6.10.2",
    "pyqt6-qt6>=6.10.2",
    "pyqt6-sip>=13.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-discovery>=1.1.1",
    "pytokens>=0.4.1",
    "pytorch-lightning>=2.5.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "ruff>=0.15.5",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shutup>=0.3.0",
    "six>=1.17.0",
    "spks",
    "squiggs",
    "stack-data>=0.6.3",
    "sympy>=1.14.0",
    "tables>=3.10.1",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "threadpoolctl>=3.6.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tornado>=6.5.5",
    "tqdm>=4.67.3",
    "traitlets>=5.14.3",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "urllib3>=2.6.3",
    "virtualenv>=21.1.0",
    "wcwidth>=0.6.0",
    "werkzeug>=3.1.4",
    "wfield",
    "widgetsnbextension>=4.0.15",
    "yarl>=1.22.0",
]

[project.scripts]
shared-gain = "shared_gain:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
damn = { git = "https://github.com/mdmelin/DAMN" }
spks = { git = "https://github.com/spkware/spks" }
squiggs = { git = "https://github.com/stellinaao/SQUIGGS" }
wfield = { git = "https://github.com/stellinaao/wfield" }
